syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Manual;

import "google/protobuf/timestamp.proto";

// User claim's record
message ManualSubscriptionRecord {
  string UserID = 1; // Guid for the user
  string SubscriptionID = 2; // Guid for the Subscription
  uint32 AmountCents = 11;
  google.protobuf.Timestamp CreatedOnUTC = 21;
  google.protobuf.Timestamp ModifiedOnUTC = 22;
  google.protobuf.Timestamp CanceledOnUTC = 23;
  string CreatedBy = 31;
  string ModifiedBy = 32;
  string CanceledBy = 33;
}
